frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/kubernetes-426007/awesome_cats_frontend:v1
        ports:
        - containerPort: 80
        # env:
        # - name: REACT_APP_API_URL
        #   value: "http://backend:8000"
